# Repo_tut

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
example/: pyvenv.cfg
members/: admin.py  forms.py  models.py  test.py  tests.py  urls.py  views.py
members/migrations/: 0002_member_joined_date_member_phone.py  0004_note.py  0005_comment.py
members/templates/: base.html  comments.html  completed.html  create.html  edit.html  home.html  new_comment.html  note.html
my_example/: .gitignore  db.sqlite3  manage.py  settings.py  urls.py
my_example/members/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
my_example/members/migrations/: 0001_initial.py  0002_member_joined_date_member_phone.py  0003_todo_delete_member.py  0004_note.py
my_example/members/templates/: all_members.html  base.html  completed.html  create.html  edit.html  home.html  master.html  test.html
my_example/my_example/: asgi.py  settings.py  urls.py  wsgi.py
