[tool.poetry]
name = "my-example"
version = "0.1.0"
description = ""
authors = ["Namjmaa <naagiidonama>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
